# starflow

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  Makefile  README.md  contributors.html  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json5  tsconfig.json
.github/: .jira_sync_config.yaml  renovate.json5  shellcheck-actions.sh
.github/workflows/: corporate-policy.yaml  lint-python.yaml  lint.yaml  policy.yaml  scan-golang.yaml  scan-python.yaml  self-test-qa.yaml  self-test-renovate.yaml  self-test-scan.yaml  self-test-setup-flow.yaml  self-test-setup.yaml  team-policy.yaml  test-cache-snaps.yaml  test-python.yaml  test-qa.yaml  test-setup-flow.yaml  test-tools.yaml  tics.yaml  zizmor.yaml
cache-snaps/: README.md
docs/: .custom_wordlist.txt  conf.py  index.rst  requirements.dummy.txt  requirements.txt
docs/explanation/: community-engagement-plan-for-documentation.rst  continuous-deployment-documentation.rst  index.rst
docs/how-to/: add-a-page-meta-description.rst  github-secrets-setup.rst  index.rst  publish-a-snap.rst  starcraft-style-guide.rst
docs/reference/: index.rst
example-action/: action.yaml  package.json
example-action/src/: index.ts
example-action/tests/: index.test.ts
lint/: README.md  action.yaml
secscan/: action.yaml  package.json
secscan/src/: index.ts
secscan/tests/: index.test.ts
setup-python-runner/: README.md  action.yaml
snap-publish/: action.yaml
test-python/: README.md  action.yaml
tools/: contributors.py
(+2 files in other folders)
